src/snapshots/todoro__ui__tests__help_popup.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭─────────────────────── Monday, October 5 2026 (today) ───────────────────────╮"
"│1. ╭ Keybindings ─────────────────────────────────────────────────────────╮   │"
"│   │ Search: type a key like x, or a word like undo                       │   │"
"│   │ ──────────────────────────────────────────────────────────────────── │   │"
"│   │ List                                                                 │   │"
"│   │   h / l               Previous / next day                            │   │"
"│   │   j / k               Move down / up                                 │   │"
"│   │   J / K               Move the item down / up the list               │   │"
"│   │   H / L               Move the item to the previous / next day       │   │"
"│   │   a                   Add an item below the cursor                   │   │"
"│   │   e                   Edit the selected item                         │   │"
"│   │   x                   Mark the selected item done / not done         │   │"
"│   │   p                   Pin / unpin: move to today until done          │   │"
"│   │   t                   Triage: High, Medium, Low, then none           │   │"
"│   │   d                   Delete the selected item                       │   │"
"│   │   Enter               Open the selected item's notes                 │   │"
"│   │   c                   Open the calendar                              │   │"
"│   │   s                   Search every day's items                       │   │"
"│   │   S                   Search items and their notes                   │   │"
"│   │   u / Ctrl+R          Undo / redo a change to the list               │   │"
"│   │   o                   Options, including accessibility               │   │"
"│   │   ?                   Show this help                                 │   │"
"╰───╰─────────────────────── ↑/↓ scroll · esc close ───────────────────────╯───╯"
" HELP   type to search  ↑/↓ scroll  esc close                                   "
