src/snapshots/todoro__ui__tests__help_popup_over_the_notes_screen.snap
---
source: src/ui.rs
expression: "render_sized(&app, 80, 16).backend()"
---
"╭──────────────────────────────── 1. Buy milk ─────────────────────────────────╮"
"│ oa╭ Keybindings ─────────────────────────────────────────────────────────╮   │"
"│   │ Search: undo                                                         │   │"
"│   │ ──────────────────────────────────────────────────────────────────── │   │"
"│   │ List                                                                 │   │"
"│   │   u / Ctrl+R          Undo / redo a change to the list               │   │"
"│   │                                                                      │   │"
"│   │ Notes                                                                │   │"
"│   │   u / Ctrl+R          Undo / redo                                    │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"╰───╰─────────────────────── ↑/↓ scroll · esc close ───────────────────────╯───╯"
" HELP   type to search  ↑/↓ scroll  esc close                                   "
