src/snapshots/todoro__ui__tests__help_popup_scrolled_to_the_end.snap
---
source: src/ui.rs
expression: "render_sized(&app, 80, 24).backend()"
---
"╭─────────────────────── Monday, October 5 2026 (today) ───────────────────────╮"
"│1. ╭ Keybindings ─────────────────────────────────────────────────────────╮   │"
"│   │ Search: type a key like x, or a word like undo                       │   │"
"│   │ ──────────────────────────────────────────────────────────────────── │   │"
"│   │   w / b / e           Next word / previous word / end of word        │   │"
"│   │   0 / $               Start / end of the line                        │   │"
"│   │   gg / G              First / last line                              │   │"
"│   │   i / a               Insert before / after the cursor               │   │"
"│   │   I / A               Insert at the start / end of the line          │   │"
"│   │   o / O               Open a new line below / above                  │   │"
"│   │   x                   Delete the character under the cursor          │   │"
"│   │   dd                  Delete the line                                │   │"
"│   │   u / Ctrl+R          Undo / redo                                    │   │"
"│   │   ?                   Show this help                                 │   │"
"│   │   Esc / q             Back to the list                               │   │"
"│   │                                                                      │   │"
"│   │ Notes, insert mode                                                   │   │"
"│   │   Enter               Start a new line                               │   │"
"│   │   Esc                 Back to normal mode                            │   │"
"│   │                                                                      │   │"
"│   │ Anywhere                                                             │   │"
"│   │   Ctrl+C              Quit                                           │   │"
"╰───╰─────────────────────── ↑/↓ scroll · esc close ───────────────────────╯───╯"
" HELP   type to search  ↑/↓ scroll  esc close                                   "
