src/snapshots/todoro__ui__tests__help_popup_searching_for_a_key.snap
---
source: src/ui.rs
expression: "render_sized(&app, 80, 16).backend()"
---
"╭─────────────────────── Monday, October 5 2026 (today) ───────────────────────╮"
"│1. ╭ Keybindings ─────────────────────────────────────────────────────────╮   │"
"│   │ Search: x                                                            │   │"
"│   │ ──────────────────────────────────────────────────────────────────── │   │"
"│   │ List                                                                 │   │"
"│   │   x                   Mark the selected item done / not done         │   │"
"│   │                                                                      │   │"
"│   │ Notes                                                                │   │"
"│   │   x                   Delete the character under the cursor          │   │"
"│   │                                                                      │   │"
"│   │ Selecting several (V)                                                │   │"
"│   │   x                   Complete them (or reopen if all complete)      │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"╰───╰─────────────────────── ↑/↓ scroll · esc close ───────────────────────╯───╯"
" HELP   type to search  ↑/↓ scroll  esc close                                   "
