src/snapshots/todoro__ui__tests__help_popup_searching_for_a_word.snap
---
source: src/ui.rs
expression: "render_sized(&app, 80, 16).backend()"
---
"╭─────────────────────── Monday, October 5 2026 (today) ───────────────────────╮"
"│1. ╭ Keybindings ─────────────────────────────────────────────────────────╮   │"
"│   │ Search: delete                                                       │   │"
"│   │ ──────────────────────────────────────────────────────────────────── │   │"
"│   │ List                                                                 │   │"
"│   │   d                   Delete the selected item                       │   │"
"│   │   W                   Workspaces: switch, create or delete           │   │"
"│   │                                                                      │   │"
"│   │ Adding or editing an item                                            │   │"
"│   │   Backspace / Delete  Delete before / under the cursor               │   │"
"│   │                                                                      │   │"
"│   │ Delete popup                                                         │   │"
"│   │   d                   Delete the item                                │   │"
"│   │                                                                      │   │"
"╰───╰─────────────────────── ↑/↓ scroll · esc close ───────────────────────╯───╯"
" HELP   type to search  ↑/↓ scroll  esc close                                   "
