src/snapshots/todoro__ui__tests__help_popup_with_no_matches.snap
---
source: src/ui.rs
expression: "render_sized(&app, 80, 16).backend()"
---
"╭─────────────────────── Monday, October 5 2026 (today) ───────────────────────╮"
"│1. ╭ Keybindings ─────────────────────────────────────────────────────────╮   │"
"│   │ Search: zzz                                                          │   │"
"│   │ ──────────────────────────────────────────────────────────────────── │   │"
"│   │ No keys match "zzz"                                                  │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"│   │                                                                      │   │"
"╰───╰─────────────────────── ↑/↓ scroll · esc close ───────────────────────╯───╯"
" HELP   type to search  ↑/↓ scroll  esc close                                   "
