src/snapshots/todoro__ui__tests__j_scrolls_down_once_the_cursor_reaches_the_bottom.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭─── Monday, October 5 2026 (today) ───╮"
"│ 9. item 9                            │"
"│10. item 10                           │"
"│11. item 11                           │"
"│12. item 12                           │"
"│13. item 13                           │"
"╰─── h ← day · k ↑ · j ↓ · day → l ────╯"
" NORMAL   a add  e edit  x done  ? help "
