src/snapshots/todoro__ui__tests__k_moves_up_within_the_view_before_scrolling.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭─── Monday, October 5 2026 (today) ───╮"
"│ 9. item 9                            │"
"│10. item 10                           │"
"│11. item 11                           │"
"│12. item 12                           │"
"│13. item 13                           │"
"╰k ↑ up · j ↓ down · next day → l ─────╯"
" NORMAL   a add  e edit  x done  d delet"
